tests/testcases/errors/BCE0085-1.boo
"""
BCE0085-1.boo(7,5): BCE0085: Can't create instance of abstract class 'Foo'.
"""
abstract class Foo:
	pass
	
f = Foo()
